Revision history for Perl extension Crypt::Random::Seed

0.02  17 Jan 2013

  - Add EGD/PRNGD source.

  - More documentation.


0.01  12 Jan 2013

  - Initial development