@@ -7,6 +7,6 @@ my @methods = (qw/name is_blocking is_strong random_bytes random_values/);
 
 use Test::More  tests => 1;
 
-my $source = new Crypt::Random::Seed;
+my $source = Crypt::Random::Seed->new;
 
 can_ok($source, @methods);
