@@ -3,22 +3,16 @@ use strict;
 use warnings;
 use Test::More;
 
-BEGIN {
-  unless ($ENV{RELEASE_TESTING}) {
-    plan( skip_all => 'these tests are for release candidate testing' );
-  }
+unless ($ENV{RELEASE_TESTING}) {
+  plan( skip_all => 'these tests are for release candidate testing' );
 }
 
 #---------------------------------------------------------------------
 
-
-eval { require Test::Perl::Critic; };
+eval { require Test::Perl::Critic; 1; };
 plan skip_all => "Test::Perl::Critic required for testing PBP compliance" if $@;
 
-Test::Perl::Critic->import(
-        -verbose => 10,
-        -severity => 'gentle',   # default
-        -force => 0,             # default (allow ## no critic)
-       );
+Test::Perl::Critic->import( -severity => 4 );
+my @directories = qw{  blib/  t/  };
 
-all_critic_ok();
+Test::Perl::Critic::all_critic_ok(@directories);
