@@ -1,19 +1,16 @@
 #!/usr/bin/perl
 use strict;
 use warnings;
+use Test::More;
 
-BEGIN {
-  unless ($ENV{RELEASE_TESTING}) {
-    require Test::More;
-    Test::More::plan(skip_all => 'these tests are for release candidate testing');
-  }
+unless ($ENV{RELEASE_TESTING}) {
+  require Test::More;
+  plan(skip_all => 'these tests are for release candidate testing');
 }
 
 #---------------------------------------------------------------------
 
-
-use Test::More;
-eval "use Test::Pod 1.41";
+eval 'use Test::Pod 1.41';  ## no critic (eval)
 plan skip_all => "Test::Pod 1.41 required for testing POD" if $@;
 
 all_pod_files_ok();
