@@ -1,17 +1,13 @@
 #!/usr/bin/perl
 use strict;
 use warnings;
+use Test::More;
 
-BEGIN {
-  unless ($ENV{RELEASE_TESTING}) {
-    require Test::More;
-    Test::More::plan(skip_all => 'these tests are for release candidate testing');
-  }
+unless ($ENV{RELEASE_TESTING}) {
+  plan( skip_all => 'these tests are for release candidate testing' );
 }
 
-#---------------------------------------------------------------------
+eval 'use Test::Kwalitee';  ## no critic (eval)
+plan( skip_all => 'Test::Kwalitee required for testing kwalitee' ) if $@;
 
-use Test::More;
-eval "use Test::Kwalitee";
-plan skip_all => "Test::Kwalitee required for testing kwalitee"
-  if $@;
+unlink 'Debian_CPANTS.txt' if -e 'Debian_CPANTS.txt';
